--- a/static/index.html
+++ b/static/index.html
@@ -45,6 +45,7 @@
                         <header class="text-center py-4">
                             <h1 class="text-white">
                                 Congratulations on your test app deployment!
+                                Change made after initial deployment!
                             </h1>
                             <h1 class="text-white">
                               Continue your journey with Octopus Deploy
